fixed small spelling error

--- a/taylor_expansion_plots.ipynb
+++ b/taylor_expansion_plots.ipynb
@@ -528,7 +528,7 @@
     "    \n",
     "ax = plt.gca()\n",
     "label = annotate3D(\n",
-    "    ax,\"The minima of the scond order Taylor Polynomial $P_2(x,y)$\\n is not the minima of $F(x,y)$!\", \n",
+    "    ax,\"The minima of the second order Taylor Polynomial $P_2(x,y)$\\n is not the minima of $F(x,y)$!\", \n",
     "    xyz = (x1,y1,F_num(x1,y1)), xytext = (20, 60),\n",
     "    textcoords = 'offset points', ha = 'center', va = 'bottom',\n",
     "    fontsize=20,zorder=100,\n",
